# fedimui-tauri-rs-go

./: Makefile  README.md  package-lock.json  package.json  tsconfig.json
src/: App.vue  main.css  main.ts  mylib.ts  sharestatestore.ts
src-go/: Makefile  app.go  appclient.go  appmain.go  apprustx.go  buildandroid.sh  flags_android.go  flags_macos.go  go.mod  go.sum  goppgen.go  logredir_android.go
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Greet.vue  Msgview.vue  Page1.vue  Page3.vue  about.vue  depmenu.vue  groupview.vue  menubar2.vue  msginputsend.vue  mylogui.vue  testui.vue
src/snips/: App.vue  One.vue
