[package]
name = "tauriuirs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauriuirs_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["devtools"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2.85"
log = {version="0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.9"
# default from index.crates.io
# rspp = "0.1"
# ok
# rspp = {git = "https://github.com/kitech/rspp" , version="0.1"}
# ok
# rspp = { path = "$HOME/aprog/rspp", version="0.1" }
rspp = { path = "../../../aprog/rspp", version="0.1" }

# https://github.com/johnthagen/min-sized-rust
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = "z"     # Optimize for size.
lto = false          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = "abort"     # Abort on panic
panic = "unwind"
strip = false        # Automatically strip symbols from the binary.
